@@ -1,3 +1,12 @@
+2006-04-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/Dialog_Filesystems.h,
+	  src/Dialog_Filesystems.cc: added column 'check'
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: use halproperty
+	  'storage.automount_enabled_hint' instead of pmount to disable
+	  automounting.
+	  
 2006-04-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/GParted_Core.h,
